--- a/blog-project/composer.json
+++ b/blog-project/composer.json
@@ -10,10 +10,12 @@
         "haruncpi/laravel-user-activity": "^1.0",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "spatie/laravel-activitylog": "^4.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "knuckleswtf/scribe": "^3.28",
         "laravel/breeze": "^1.8",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
